src/pages/Home/styles.module.css
.container {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.main {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.filters_section {
    position: sticky;
    z-index: 1;
    top: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 35px;
    background: var(--bg);
    padding-bottom: 11px;
}

.search_section {
    margin-top: 16px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.deals_amount {
    font-size: var(--deals-amount-f-s);
    font-weight: var(--deals-amount-f-w);
    color: var(--deals-amount-f-c);
}

.load {
    height: 40px;
    font-size: var(--loading-msg-f-s);
    font-weight: var(--loading-msg-f-w);
    color: var(--loading-msg-f-c);
}

.search_container {
    display: flex;
    align-items: flex-end;
    gap: 16px;
}

.filter {
    display: flex;
    gap: 12px;
    align-items: center;
    height: 46px;
    font-size: var(--filter-btn-f-s);
    font-weight: var(--filter-btn-f-w);
    color: var(--filter-btn-f-c);
    background: var(--filter-btn-bg);
    border-width: var(--filter-btn-border-w);
    border-style: solid;
    border-color: var(--filter-btn-border-c);
    border-radius: var(--filter-btn-radius);
    padding: 16px 12px 16px 15px;
    cursor: pointer;
    transition: .2s;
}

.filter:hover {
    background: var(--filter-btn-hover-bg);
    color: var(--filter-btn-hover-f-c);
}

.not_available_container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    max-width: 100%;
}

.not_available {
    color: var(--title-f-c);
}

.test_label {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
    position: absolute;
    top: 15px;
    right: 32px;
    user-select: none;
    cursor: pointer;
    color: var(--title-f-c);
    background: var(--rewards-bg);
    padding: 6px 12px;
    font-size: 12px;
    font-weight: 600;
    border-radius: 32px;
}

.test_checkbox {
    accent-color: var(--primary-btn-bg);
    cursor: pointer;
}

@media screen and (max-width: 768px) {
    .search_section {
        flex-direction: column-reverse;
        gap: 22px;
    }

    .search_container {
        flex-direction: column;
    }

    .filter {
        width: 100%;
        justify-content: space-between;
    }
}

